test/langtools/tools/javac/superInit/SuperInitBad03.out
SuperInitBad03.java:11:23: compiler.err.cant.ref.before.ctor.called: super
1 error
